# ffmpeg_practice

./: .gitignore
muxing/: CMakeLists.txt  muxing.c
official_examples/: CMakeLists.txt  README.md  metadata.c  muxing.c
